<resources>
    <string name="app_name">Doctor Finder</string>
    <string name="user_name">user name</string>
    <string name="all_specialities">All specialities</string>
    <string name="sub_specialities">Sub specialities</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="priceRange">Price Range</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
