<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.applet.doctorfinder.doctorfinder.view.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/apperpar">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingRight="20dp"
                android:text="Doctor Finder"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.DrawerLayout

        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_home"
            tools:context="com.applet.doctorfinder.doctorfinder.view.HomeActivity">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/rlBottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        style="@style/signINstyle"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/logo" />

                    <AutoCompleteTextView
                        android:layout_marginTop="20dp"
                        android:id="@+id/auto_AllSpecial"
                        style="@style/homeButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/clinic_name"
                        android:hint="@string/all_specialities" />

                    <AutoCompleteTextView
                        android:id="@+id/auto_subSpecial"
                        style="@style/homeButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/clinic_name"
                        android:hint="@string/sub_specialities" />

                    <AutoCompleteTextView
                        android:id="@+id/auto_city"
                        style="@style/homeButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/doctor_city"
                        android:hint="@string/city" />

                    <AutoCompleteTextView
                        android:id="@+id/auto_area"
                        style="@style/homeButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/doctor_city"
                        android:hint="@string/area" />

                    <AutoCompleteTextView
                        android:id="@+id/auto_priceRange"
                        style="@style/homeButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/fees"
                        android:hint="@string/priceRange" />

                    <AutoCompleteTextView
                        android:id="@+id/auto_doctor_name"
                        style="@style/homeButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/doctor_speciality"
                        android:hint="@string/doctor_name" />


                    <Button
                        android:id="@+id/btn_findDoctor"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="60dp"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/button"
                        android:onClick="searchResult"
                        android:text="@string/find_doctor"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </ScrollView>

            <RelativeLayout
                android:id="@+id/rlBottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/down">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/search" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Search"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:id="@+id/linearLayout">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/timetable" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Time Table"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"

                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical"
                    android:layout_alignTop="@+id/linearLayout"
                    android:layout_centerHorizontal="true">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/favourites" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Favorites"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>


        <fragment
            android:id="@+id/draw"
            android:name="com.applet.doctorfinder.doctorfinder.view.navFragment"
            android:layout_width="@dimen/nav_bar"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:layout="@layout/nav_doctor"
            tools:layout="@layout/nav_doctor"></fragment>

    </android.support.v4.widget.DrawerLayout>


</LinearLayout>